Fix structural/styling error by wrapping inputs in <p></p> tags

--- a/style.css
+++ b/style.css
@@ -45,5 +45,5 @@ input:focus:invalid {
 }
 
 .error.active {
-  padding: 0.3rem;
+  padding: 0.3em;
 }
